--- a/proxy.pop3/pom.xml
+++ b/proxy.pop3/pom.xml
@@ -18,6 +18,7 @@
         <maven-eclipse-plugin.version>2.10</maven-eclipse-plugin.version>
         <org.slf4j.version>1.7.21</org.slf4j.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <guice.version>4.0</guice.version>
     </properties>
 
     <dependencies>
@@ -35,6 +36,11 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>${org.slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>${guice.version}</version>
         </dependency>
 
         <dependency>
