--- a/proxy.pop3/pom.xml
+++ b/proxy.pop3/pom.xml
@@ -19,9 +19,15 @@
         <org.slf4j.version>1.7.21</org.slf4j.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <guice.version>4.0</guice.version>
+        <jaxb.version>2.2.12</jaxb.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>${jaxb.version}</version>
+        </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
