--- a/proxy.pop3/pom.xml
+++ b/proxy.pop3/pom.xml
@@ -20,6 +20,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <guice.version>4.0</guice.version>
         <jaxb.version>2.2.12</jaxb.version>
+        <mockito.version>2.0.54-beta</mockito.version>
     </properties>
 
     <dependencies>
@@ -53,6 +54,12 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+       	    <groupId>org.mockito</groupId>
+      	    <artifactId>mockito-core</artifactId>
+            <version>${mockito.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
