--- a/proxy.pop3/pom.xml
+++ b/proxy.pop3/pom.xml
@@ -21,6 +21,7 @@
         <guice.version>4.0</guice.version>
         <jaxb.version>2.2.12</jaxb.version>
         <mockito.version>2.0.54-beta</mockito.version>
+        <commons-lang.version>3.4</commons-lang.version>
     </properties>
 
     <dependencies>
@@ -48,6 +49,11 @@
             <groupId>com.google.inject</groupId>
             <artifactId>guice</artifactId>
             <version>${guice.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons-lang.version}</version>
         </dependency>
 
         <dependency>
